<resources>
    <string name="app_name">DisasterGuard</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_key_theme">key_theme</string>
    <string name="something_wrong">Something wrong..</string>
    <string name="recent_disaster">Recent Disaster</string>
    <string name="empty_recent_disaster">No recent live disasters</string>
    <string name="icon_disaster_live">Icon Disaster Live</string>
    <string name="icon_disaster_archive">Icon Disaster Archive</string>
    <string name="line">line</string>
    <string name="archive_disaster">Archive Disaster</string>
    <string name="archive_disaster_detail">Disaster data for the last month</string>
    <string name="hint">Enter a region name</string>
    <string name="close">Close</string>
    <string name="rv_disaster_title">List Disaster Live</string>
    <string name="button_filter">button filter</string>
    <string name="button_setting">button setting</string>
    <string name="show_off">show_off</string>
    <string name="list_bencana_terkini">List Bencana Terkini</string>
    <string name="enter_start_date">Please Enter Star date</string>
    <string name="enter_start">OK Start Date</string>
    <string name="enter_end_date">Please Enter End date</string>
    <string name="find_archive">Find Archive</string>


    <string-array name="province">
        <item>Aceh</item>
        <item>Bali</item>
        <item>Kep Bangka Belitung</item>
        <item>Banten</item>
        <item>Bengkulu</item>
        <item>Jawa Tengah</item>
        <item>Kalimantan Tengah</item>
        <item>Sulawesi Tengah</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Timur</item>
        <item>Nusa Tenggara Timur</item>
        <item>Gorontalo</item>
        <item>DKI Jakarta</item>
        <item>Jambi</item>
        <item>Lampung</item>
        <item>Maluku</item>
        <item>Kalimantan Utara</item>
        <item>Maluku Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sumatera Utara</item>
        <item>Papua</item>
        <item>Riau</item>
        <item>Kep Riau</item>
        <item>Sulawesi Tenggara</item>
        <item>Kalimantan Selatan</item>
        <item>Sulawesi Selatan</item>
        <item>Sumatera Selatan</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Barat</item>
        <item>Kalimantan Barat</item>
        <item>Nusa Tenggara Barat</item>
        <item>Papua Barat</item>
        <item>Sulawesi Barat</item>
        <item>Sumatera Barat</item>
    </string-array>

</resources>